[gd_scene load_steps=31 format=2]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://art/level/background.png" type="Texture" id=2]
[ext_resource path="res://scenes/gem_yellow.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/gem_red.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/platform.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/wall.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/player.gd" type="Script" id=7]
[ext_resource path="res://art/player/idle/frame-1.png" type="Texture" id=8]
[ext_resource path="res://art/player/idle/frame-2.png" type="Texture" id=9]
[ext_resource path="res://art/player/got hit/frame-got-hit.png" type="Texture" id=10]
[ext_resource path="res://art/player/running/frame-1.png" type="Texture" id=11]
[ext_resource path="res://art/player/running/frame-2.png" type="Texture" id=12]
[ext_resource path="res://art/player/running/frame-3.png" type="Texture" id=13]
[ext_resource path="res://art/player/running/frame-4.png" type="Texture" id=14]
[ext_resource path="res://art/player/running/frame-5.png" type="Texture" id=15]
[ext_resource path="res://art/player/running/frame-6.png" type="Texture" id=16]
[ext_resource path="res://art/player/jump/jump_fall.png" type="Texture" id=17]
[ext_resource path="res://art/player/jump/jump_up.png" type="Texture" id=18]
[ext_resource path="res://scenes/enemy.tscn" type="PackedScene" id=19]
[ext_resource path="res://art/HUD/play_icon.png" type="Texture" id=20]
[ext_resource path="res://art/HUD/restart_icon.png" type="Texture" id=21]
[ext_resource path="res://art/HUD/exit_icon.png" type="Texture" id=22]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=23]
[ext_resource path="res://scenes/HUD_TOUCH_PLAY.tscn" type="PackedScene" id=24]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": false,
"name": "got_hit",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "running",
"speed": 8.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": false,
"name": "fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": false,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 38.6127
height = 60.1065

[sub_resource type="DynamicFont" id=3]

size = 40
use_mipmaps = false
use_filter = false
font_data = ExtResource( 23 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=4]

size = 50
use_mipmaps = false
use_filter = false
font_data = ExtResource( 23 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Animation" id=5]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 365, -69 ), Vector2( 365, 40 ) ]
}

[sub_resource type="Animation" id=6]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 365, -69 ), Vector2( 365, 40 ) ]
}

[node name="main" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="." index="0"]

position = Vector2( 512, 300 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Transform" ]

[node name="background" type="Sprite" parent="." index="1"]

position = Vector2( 454.69, 203.634 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="gem_yellow_1" parent="." index="2" instance=ExtResource( 3 )]

position = Vector2( 459.3, 452.619 )

[node name="gem_yellow_2" parent="." index="3" instance=ExtResource( 3 )]

position = Vector2( 820.101, 270.57 )

[node name="gem_red_1" parent="." index="4" instance=ExtResource( 4 )]

position = Vector2( 228.962, 58.9501 )

[node name="platform" parent="." index="5" instance=ExtResource( 5 )]

position = Vector2( 637.417, 341.832 )

[node name="platform2" parent="." index="6" instance=ExtResource( 5 )]

position = Vector2( 282.548, 530.798 )

[node name="wall" parent="." index="7" instance=ExtResource( 6 )]

position = Vector2( 877.478, 266.993 )

[node name="wall2" parent="." index="8" instance=ExtResource( 6 )]

position = Vector2( 396.446, 266.091 )

[node name="player" type="KinematicBody2D" parent="." index="9"]

editor/display_folded = true
position = Vector2( 202.021, 408.5 )
z_index = 1
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 7 )
_sections_unfolded = [ "Transform", "Z Index" ]
__meta__ = {
"_edit_group_": true
}

[node name="sprite" type="AnimatedSprite" parent="player" index="0"]

scale = Vector2( 0.2, 0.2 )
frames = SubResource( 1 )
animation = "fall"
playing = true
_sections_unfolded = [ "Transform" ]

[node name="collision" type="CollisionShape2D" parent="player" index="1"]

position = Vector2( 5, 0 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="camera" type="Camera2D" parent="player" index="2"]

anchor_mode = 1
rotating = false
current = false
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[node name="enemy" parent="." index="10" instance=ExtResource( 19 )]

position = Vector2( 705.477, 245 )

[node name="HUD" type="Control" parent="." index="11"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = -1.0
margin_right = -1.0
margin_bottom = -1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Visibility" ]

[node name="play_btn" type="Button" parent="HUD" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 494.0
margin_top = 200.0
margin_right = 574.0
margin_bottom = 274.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 20 )
flat = false
align = 1
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="replay_btn" type="Button" parent="HUD" index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -68.0
margin_top = -10.0
margin_right = 12.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 21 )
flat = false
align = 1
_sections_unfolded = [ "Visibility" ]

[node name="exit_btn" type="Button" parent="HUD" index="2"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 26.0
margin_top = -10.0
margin_right = 106.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 22 )
flat = false
align = 1
_sections_unfolded = [ "Visibility" ]

[node name="score_label" type="Label" parent="HUD" index="3"]

modulate = Color( 0.64, 0.29, 0.29, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 10.0
margin_right = 40.0
margin_bottom = 59.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="game_over_label" type="Label" parent="HUD" index="4"]

modulate = Color( 0.644531, 0.292053, 0.292053, 1 )
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -147.0
margin_top = -69.0
margin_right = 147.0
margin_bottom = -8.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "Game Over"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility", "custom_fonts" ]

[node name="anim_slide_in" type="AnimationPlayer" parent="HUD/game_over_label" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/game_over_slide_in = SubResource( 5 )
blend_times = [  ]

[node name="game_won_label" type="Label" parent="HUD" index="5"]

modulate = Color( 0.644531, 0.292053, 0.292053, 1 )
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -147.0
margin_top = -69.0
margin_right = 147.0
margin_bottom = -8.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "Game Won"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility", "custom_fonts" ]

[node name="anim_slide_in" type="AnimationPlayer" parent="HUD/game_won_label" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/game_won_slide_in = SubResource( 6 )
blend_times = [  ]

[node name="HUD_TOUCH_PLAY" parent="." index="12" instance=ExtResource( 24 )]

visible = false

[connection signal="button_up" from="HUD/play_btn" to="." method="_on_play_btn_button_up"]

[connection signal="button_up" from="HUD/replay_btn" to="." method="_on_replay_btn_button_up"]

[connection signal="button_up" from="HUD/exit_btn" to="." method="_on_exit_btn_button_up"]


